Fixing layout and background alignments

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,9 @@ body {
     display: grid;
     grid-template-columns: minmax(min-content, 0.2fr) 1fr;
     min-height: 100vh;
+    grid-template-areas: 
+        'nav cards'
+        'footer footer';
 }
 
 /* nav-bar styling */
@@ -67,7 +70,11 @@ body {
     background-color: var(--dark-green);
     color: var(--neutral-color);
     padding: 1rem;
-    gap: 1rem;
+    height: 100%;
+}
+
+.nav-list {
+    padding: 0.5em;
 }
 
 .nav-list a {
@@ -187,6 +194,9 @@ body {
 /* footer */
 
 footer {
+    background-color: var(--dark-green);
+    color: var(--neutral-color);
+    grid-area: footer;
     display: grid;
     grid-template-columns: 2fr 3fr;
     padding: 1rem;
@@ -195,7 +205,7 @@ footer {
 
 footer a {
     text-decoration: none;
-    color: var(--dark-red);
+    color: var(--neutral-color);
     padding: 0.5rem;
 }
 
